Reformat code, remove unnecessary files.

--- a/login.html
+++ b/login.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sri Lanka's best site for the best prices and monthly rentals of new and used cars and vehicles to buy, sell and lease/finance.">
     <meta name="keywords" content="vehicle, sale, sri lanka, vehicle sale ">
+    <meta name="msapplication-TileImage" content="resources/images/win8-tile-icon.png">
+
     <link rel="shortcut icon" type="image/png" href="resources/images/pat-pat-icon.png" />
     <link href="resources/images/apple-icon-touch.png" rel="apple-touch-icon" />
-    <meta name="msapplication-TileImage" content="resources/images/win8-tile-icon.png">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/custom-style.css">
-
-    <script type="text/javascript" src="resources/js/libs/jquery/jquery.min.js"></script>
-    <link rel="stylesheet" href="resources/fontawesome-free/css/all.min.css">
-    <script type="text/javascript" src="resources/js/scripts.min.js"></script>
 </head>
 
 <body>
@@ -73,31 +73,34 @@
                     <li class="active">Login</li>
                 </ul>
             </div>
-            
+
             <!-- Loin form goes here -->
             <br><br>
             <div class="col-md-3">
             </div>
             <div class="col-md-6">
-		        <form>
-				  <div class="form-group">
-				    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-				    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-				  </div>
-				  <br>
-				  <div class="form-group">
-				    <input type="password" class="form-control" id="password" placeholder="Password">
-				  </div>
-				  <br>
-				  <label for="password" style="font-weight: normal !important ; margin-left:28em">Forgot password? <a href=#>Reset</a></label>
-				  <br><br>
-				  <button type="submit" class="btn btn-primary" style="background-color:green; padding: 6px 253px">Login</button>
-				  <br><br><br>
-				  <label for="submit" style="font-weight: normal !important">New to patpat.lk? <a href=#>Register</a></label>
-				 
-				</form>
-			</div>
-			<div class="col-md-3">
+                <form>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                            else.</small>
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    </div>
+                    <br>
+                    <label for="password" style="font-weight: normal !important ; margin-left:28em">Forgot password? <a
+                            href=#>Reset</a></label>
+                    <br><br>
+                    <button type="submit" class="btn btn-primary" style="background-color:green; padding: 6px 253px">Login</button>
+                    <br><br><br>
+                    <label for="submit" style="font-weight: normal !important">New to patpat.lk? <a href=#>Register</a></label>
+
+                </form>
+            </div>
+            <div class="col-md-3">
             </div>
         </div>
     </div>
@@ -142,5 +145,9 @@
         </div>
     </footer>
 </body>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+<script type="text/javascript" src="resources/js/scripts.min.js"></script>
 
 </html>
