--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sri Lanka's best site for the best prices and monthly rentals of new and used cars and vehicles to buy, sell and lease/finance.">
     <meta name="keywords" content="vehicle, sale, sri lanka, vehicle sale ">
+    <meta name="msapplication-TileImage" content="resources/images/win8-tile-icon.png">
+
+    <!-- Font Awesome -->
     <link rel="shortcut icon" type="image/png" href="resources/images/pat-pat-icon.png" />
     <link href="resources/images/apple-icon-touch.png" rel="apple-touch-icon" />
-    <meta name="msapplication-TileImage" content="resources/images/win8-tile-icon.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/custom-style.css">
-
-    <script type="text/javascript" src="resources/js/libs/jquery/jquery.min.js"></script>
-    <link rel="stylesheet" href="resources/fontawesome-free/css/all.min.css">
-    <script type="text/javascript" src="resources/js/scripts.min.js"></script>
 </head>
 
 <body>
@@ -35,12 +35,7 @@
                     <form action="search.php" method="get" id="primary_search" name="basic-search">
                         <div id="search">
                             <div class="input-group">
-                                <input class="form-control" autocomplete="off" type="search" placeholder="Type your search here (Type,Make,Model etc.)"
-                                    required="required" />
-                                <div id="suggestion-box"></div>
-                                <span class="input-group-btn">
-                                    <input type="submit" name="basic_search" id="btn-search" class="btn btn-info btn-lg">
-                                </span>
+
                             </div>
                         </div>
                     </form>
@@ -66,7 +61,7 @@
 
 
     <div class="main-content">
-        <div class="container gray">
+        <div class="container">
             <div class="wr-breadcrumb">
                 <ul class="breadcrumb">
                     <li><a href="index.html">Home</a></li>
@@ -74,8 +69,7 @@
                 </ul>
             </div>
 
-
-            <div class="row dashboard">
+            <div class="row dashboard d-flex justify-content-center">
                 <div class="col-md-2 focus-grid">
                     <a href="#">
                         <div class="focus-border">
@@ -109,7 +103,7 @@
                         </div>
                     </a>
                 </div>
-                
+
                 <div class="col-md-2 focus-grid">
                     <a href="#">
                         <div class="focus-border">
@@ -175,5 +169,9 @@
         </div>
     </footer>
 </body>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+<script type="text/javascript" src="resources/js/scripts.min.js"></script>
 
 </html>
