--- a/index.html
+++ b/index.html
@@ -63,11 +63,46 @@
 
     <!-- Main content -->
     <main role="main">
-        <!-- Content -->
+        <!-- Search area -->
         <div class="container">
-            <p>Write your stuff here</p>
+            <br>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                        aria-selected="true">By make & model</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                        aria-selected="false">By installment amount</a>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <br>
+                <div class="tab-pane fade show active d-flex justify-content-center" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Enter make/model of a vehicle..."
+                            aria-label="Text input with dropdown button">
+                        <div class="input-group-append">
+                            <select class="custom-select" id="inputGroupSelect02">
+                                <option selected>Select category...</option>
+                                <option value="1">Car</option>
+                                <option value="2">Van</option>
+                                <option value="3">Lorry</option>
+                                <option value="3">Bike</option>
+                                <option value="3">Threewheeler</option>
+                            </select>
+                        </div>
+
+                        <button class="btn btn-primary">Search</button>
+
+                    </div>
+                </div>
+
+
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+            </div>
         </div>
-        <!-- Content -->
+        <!-- Search area -->
 
     </main>
     <!-- Main content -->
