--- a/index.html
+++ b/index.html
@@ -2,111 +2,183 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>PatPat.lk Sri Lanka's best leasing site for new and used cars and vehicles.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sri Lanka's best site for the best prices and monthly rentals of new and used cars and vehicles to buy, sell and lease/finance.">
+    <meta name="keywords" content="vehicle, sale, sri lanka, vehicle sale ">
+    <link rel="shortcut icon" type="image/png" href="resources/images/pat-pat-icon.png" />
+    <link href="resources/images/apple-icon-touch.png" rel="apple-touch-icon" />
+    <meta name="msapplication-TileImage" content="resources/images/win8-tile-icon.png">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <!-- Footer CSS -->
-    <link href="https://getbootstrap.com/docs/4.1/examples/sticky-footer/sticky-footer.css" rel="stylesheet">
 
-    <link href="./css/custom.css">
-    <title>Hello, world!</title>
+    <!-- Custom styles for this template -->
+    <link href="resources/css/custom-style.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="resources/fontawesome-free/css/all.min.css">
+
 </head>
 
 <body>
+
+
     <header>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="index.html">PatPat.lk</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <!-- left side -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-                <!-- left side -->
-
-                <!-- right side -->
-                <div class="my-2 my-lg-0">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link btn btn-danger" href="#">Post your ad <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <!-- space --></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <!-- space --></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
-                        </li>
-                    </ul>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h1 class="main-title">
+                        <a class="brand">
+                            patpat.lk
+                            <img src="resources/images/patpat-lk-car-sale-logo.png" class="img-responsive" alt="patpat logo" />
+                        </a>
+                    </h1>
+                    <meta itemprop="name" content="Patpat.lk">
                 </div>
-                <!-- right side -->
+
+                <div class="col-sm-4 col-md-5">
+                    <form action="search.php" method="get" id="primary_search" name="basic-search">
+                        <div id="search">
+                            <div class="input-group">
+                                <input class="form-control" autocomplete="off" type="search" placeholder="Type your search here (Type,Make,Model etc.)" required="required"
+                                />
+                                <div id="suggestion-box"></div>
+                                <span class="input-group-btn">
+                                    <input type="submit" name="basic_search" id="btn-search" class="btn btn-info btn-lg">
+                                </span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+                <div id="user-functions" class="col-sm-5 col-md-4 clearfix">
+                    <div class="user-links pull-right">
+                        <a href="#">
+                            Ann</a>
+                        </a> |
+                        <a data-toggle="modal" href="#">Logout</a>
+                    </div>
+
+                </div>
             </div>
-        </nav>
-        <!-- Navbar -->
+        </div>
     </header>
 
 
-    <!-- Main content -->
-    <main role="main">
-        <!-- Content -->
-        <div class="container">
-            <p>Write your stuff here</p>
-        </div>
-        <!-- Content -->
-
-    </main>
-    <!-- Main content -->
-
-    <!-- Footer -->
-    <footer class="footer bg-grey">
-        <div class="d-flex justify-content-center bg-grey">
-            <!-- footer section 1 -->
-            <div class="col-md-4 footer-item">
-                <h5>User Links</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#">My Account</a></li>
-                    <li><a href="#">Logout</a></li>
+    <div class="main-content">
+        <div class="container gray">
+            <div class="wr-breadcrumb">
+                <ul class="breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active">Dashboard</li>
                 </ul>
             </div>
 
-            <!-- footer section 2 -->
-            <div class="col-md-4 footer-item">
-                <h5>Useful Links</h5>
+
+            <div class="row dashboard">
+                <div class="col-md-2 focus-grid">
+                    <a href="user-profile.html">
+                        <div class="focus-border">
+                            <div class="focus-layout">
+                                <div class="focus-image"><i class="fa fa-user"></i></div>
+                                <h4 class="clrchg">My Profile</h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-md-2 focus-grid">
+                    <a href="#">
+                        <div class="focus-border">
+                            <div class="focus-layout">
+                                <div class="focus-image"><i class="fa fa-newspaper"></i></div>
+                                <h4 class="clrchg"> My Advertisements</h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-md-2 focus-grid">
+                    <a href="#">
+                        <div class="focus-border">
+                            <div class="focus-layout">
+                                <div class="focus-image"><i class="fas fa-paper-plane"></i></div>
+                                <h4 class="clrchg">Post an Advertisement</h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-md-2 focus-grid">
+                    <a href="#">
+                        <div class="focus-border">
+                            <div class="focus-layout">
+                                <div class="focus-image"><i class="fas fa-heart"></i></div>
+                                <h4 class="clrchg">My Vehicle Watch List</h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-2 focus-grid center-box">
+                    <a href="#">
+                        <div class="focus-border">
+                            <div class="focus-layout">
+                                <div class="focus-image"><i class="fa fa-tty"></i></div>
+                                <h4 class="clrchg">My Quick Lease Requests</h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
             </div>
 
-            <!-- footer section 3 -->
-            <div class="col-md-4 footer-item">
-                <h5>Follow Us!</h5>
+
+        </div>
+    </div>
+
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-4">
+                    <h4>User Links</h4>
+                    <ul class="footer-links">
+                        <li><a href="user-dashboard.html">My Account</a></li>
+                        <li><a data-toggle="modal" href="?id=out">Logout</a></li>
+                    </ul>
+                </div>
+                <div class="col-xs-4">
+                    <h4>Useful Links</h4>
+                    <ul class="footer-links">
+                        <li><a href="en/about-us">About Us</a>
+                        </li>
+                        <li><a href="en/faq">FAQ's</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-xs-4">
+                    <h4 class="col-xs-12">Follow us on</h4>
+                    <div id="social-links">
+                        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="copyright text-center">
+            <div class="container">
+                <hr>
+                <p>Copyright &copy; Patpat.lk, All Rights Reserved. </p>
             </div>
         </div>
     </footer>
-    <!-- Footer -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
 
-    <iframe frameborder="0" scrolling="no" style="background-color: transparent; border: 0px; display: none;"></iframe>
+
 </body>
 
 </html>
