--- a/upate-password.html
+++ b/upate-password.html
@@ -92,7 +92,7 @@
                 <label for="inputEmail3" class=" ml-2">Current Password <span class="asterisk">*</span></label>
               </div>
               <div class="col-6">
-                <input type="text" class="form-control" placeholder="Current Password">
+                <input type="password" class="form-control" placeholder="Current Password">
               </div>
             </div><br/>
 
@@ -101,7 +101,7 @@
                 <label for="inputEmail3" class=" ml-2">Password <span class="asterisk">*</span></label>
               </div>
               <div class="col-6">
-                <input type="text" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Password">
               </div>
             </div><br/>
 
@@ -110,7 +110,7 @@
                 <label for="inputEmail3" class=" ml-2">Confirm Password <span class="asterisk">*</span></label>
               </div>
               <div class="col-6">
-                <input type="text" class="form-control" placeholder="Confirm Password">
+                <input type="password" class="form-control" placeholder="Confirm Password">
               </div>
             </div><br/>
 
