--- a/user-profile.html
+++ b/user-profile.html
@@ -67,7 +67,7 @@
       <div class="wr-breadcrumb">
         <ul class="breadcrumb">
           <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">Dashboard</a></li>
+          <li><a href="user-dashboard.html">Dashboard</a></li>
           <li class="active">Change Password</li>
         </ul>
       </div>
