sample file added

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -38,8 +38,8 @@
           <form action="search.php" method="get" id="primary_search" name="basic-search">
             <div id="search">
               <div class="input-group">
-                <input class="form-control" autocomplete="off" type="search" placeholder="Type your search here (Type,Make,Model etc.)" required="required"
-                />
+                <input class="form-control" autocomplete="off" type="search" placeholder="Type your search here (Type,Make,Model etc.)"
+                  required="required" />
                 <div id="suggestion-box"></div>
                 <span class="input-group-btn">
                   <input type="submit" name="basic_search" id="btn-search" class="btn btn-info btn-lg">
@@ -51,12 +51,9 @@
 
         <div id="user-functions" class="col-sm-5 col-md-4 clearfix">
           <div class="user-links pull-right">
-            <a href="#">
-              Ann</a>
-            </a> |
+            <a href="#">Ann</a> |
             <a data-toggle="modal" href="#">Logout</a>
           </div>
-
         </div>
       </div>
     </div>
@@ -67,7 +64,7 @@
       <div class="wr-breadcrumb">
         <ul class="breadcrumb">
           <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">Dashboard</a></li>
+          <li><a href="user-dashboard.html">Dashboard</a></li>
           <li class="active">Edit Proile</li>
         </ul>
       </div>
@@ -92,36 +89,36 @@
                 <label for="inputEmail3" class=" ml-4">First Name <span class="asterisk">*</span></label>
               </div>
               <div class="col-7">
-                <input type="text" class="form-control" placeholder="First name">
+                <input type="text" class="form-control" placeholder="First name" value="Ann">
               </div>
-            </div><br/>
+            </div><br />
 
             <div class="form-row">
               <div class="col-5">
                 <label for="inputEmail3" class=" ml-4">Last Name <span class="asterisk">*</span></label>
               </div>
               <div class="col-7">
-                <input type="text" class="form-control" placeholder="Last name">
+                <input type="text" class="form-control" placeholder="Last name" value="Perera">
               </div>
-            </div><br/>
+            </div><br />
 
             <div class="form-row">
               <div class="col-5">
                 <label for="inputEmail3" class=" ml-4">Telephone <span class="asterisk">*</span></label>
               </div>
               <div class="col-7">
-                <input type="text" class="form-control" placeholder="Mobile Number">
+                <input type="number" class="form-control" placeholder="Mobile Number" value="0715685965">
               </div>
-            </div><br/>
+            </div><br />
 
             <div class="form-row">
               <div class="col-5">
                 <label for="inputEmail3" class=" ml-4">Email <span class="asterisk">*</span></label>
               </div>
               <div class="col-7">
-                <input type="email" class="form-control" placeholder="Email Address">
+                <input type="email" class="form-control" placeholder="Email Address" value="ann44@gmail.com">
               </div>
-            </div><br/>
+            </div><br />
 
 
             <div class="form-row">
@@ -131,12 +128,12 @@
               <div class="col-7">
                 <select class="custom-select" required>
                   <option value="">Select Location</option>
-                  <option value="1">Gampaha</option>
+                  <option value="1" selected>Gampaha</option>
                   <option value="2">Colombo</option>
                   <option value="3">Kaduwela</option>
                 </select>
               </div>
-            </div><br/>
+            </div><br />
 
 
             <div class="text-center">
