--- a/sample.html
+++ b/sample.html
@@ -24,6 +24,7 @@
   <header>
     <div class="container">
       <div class="row">
+
         <div class="col-sm-3">
           <h1 class="main-title">
             <a class="brand">
@@ -38,8 +39,8 @@
           <form action="search.php" method="get" id="primary_search" name="basic-search">
             <div id="search">
               <div class="input-group">
-                <input class="form-control" autocomplete="off" type="search" placeholder="Type your search here (Type,Make,Model etc.)" required="required"
-                />
+                <input class="form-control" autocomplete="off" type="search" placeholder="Type your search here (Type,Make,Model etc.)"
+                  required="required" />
                 <div id="suggestion-box"></div>
                 <span class="input-group-btn">
                   <input type="submit" name="basic_search" id="btn-search" class="btn btn-info btn-lg">
@@ -51,116 +52,27 @@
 
         <div id="user-functions" class="col-sm-5 col-md-4 clearfix">
           <div class="user-links pull-right">
-            <a href="#">
-              Ann</a> |
+            <a href="#">Ann</a> |
             <a data-toggle="modal" href="#">Logout</a>
           </div>
-
         </div>
+        
       </div>
     </div>
   </header>
 
+	<!--  Your content goes here  -->
   <div class="main-content">
     <div class="container gray">
-      <div class="wr-breadcrumb">
-        <ul class="breadcrumb">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="user-dashboard.html">Dashboard</a></li>
-          <li class="active">Change Password</li>
-        </ul>
-      </div>
 
 
-      <div class="card">
-        <div class="card-header">
-          <h3>My Profile</h3>
-        </div>
-        <div class="card-body">
 
 
-          <div class="text-center mb-4">
-            <img alt="User Pic" height="120" width="120" src="resources/images/user.jfif" class="img-circle img-responsive">
-          </div>
 
-
-          <form>
-            <div class="form-row">
-              <div class="col-4">
-                <label class=" ml-4">First Name </label>
-              </div>
-              <div class="col-3">
-                <label class=" ml-5">: </label>
-              </div>
-              <div class="col-5">
-                <label>Ann</label>
-              </div>
-            </div><br/>
-
-            <div class="form-row">
-              <div class="col-4">
-                <label class=" ml-4">Last Name </label>
-              </div>
-              <div class="col-3">
-                <label class=" ml-5">: </label>
-              </div>
-              <div class="col-5">
-                <label>Perera</label>
-              </div>
-            </div><br/>
-
-            <div class="form-row">
-              <div class="col-4">
-                <label class=" ml-4">Telephone </label>
-              </div>
-              <div class="col-3">
-                <label class=" ml-5">: </label>
-              </div>
-              <div class="col-5">
-                <label>0715685965</label>
-              </div>
-            </div><br/>
-
-            <div class="form-row">
-              <div class="col-4">
-                <label class=" ml-4">Email </label>
-              </div>
-              <div class="col-3">
-                <label class=" ml-5">: </label>
-              </div>
-              <div class="col-5">
-                <label>ann44@gmail.com</label>
-              </div>
-            </div><br/>
-
-
-            <div class="form-row">
-              <div class="col-4">
-                <label class=" ml-4">Location</label>
-              </div>
-              <div class="col-3">
-                <label class=" ml-5">: </label>
-              </div>
-              <div class="col-5">
-                <label>Gampaha</label>
-              </div>
-            </div><br/>
-
-
-            <div class="text-center">
-              <a href="upate-password.html" class="btn btn-success">Change Password</a>
-              <a href="edit-profile.html" class="btn btn-primary purple-btn">Edit Profile</a>
-            </div>
-
-
-          </form>
-        </div>
-
-
-      </div>
 
     </div>
   </div>
+	<!--  Your content end -->
 
   <footer>
     <div class="container">
@@ -200,5 +112,4 @@
   </footer>
 
 </body>
-
 </html>
