--- a/upate-password.html
+++ b/upate-password.html
@@ -52,8 +52,7 @@
         <div id="user-functions" class="col-sm-5 col-md-4 clearfix">
           <div class="user-links pull-right">
             <a href="#">
-              Ann</a>
-            </a> |
+              Ann</a> |
             <a data-toggle="modal" href="#">Logout</a>
           </div>
 
