--- a/user-profile-update-success.html
+++ b/user-profile-update-success.html
@@ -52,8 +52,7 @@
         <div id="user-functions" class="col-sm-5 col-md-4 clearfix">
           <div class="user-links pull-right">
             <a href="#">
-              Ann</a>
-            </a> |
+              Ann</a> |
             <a data-toggle="modal" href="#">Logout</a>
           </div>
 
@@ -143,7 +142,7 @@
                 <label class=" ml-5">: </label>
               </div>
               <div class="col-5">
-                <label>Malabe</label>
+                <label>Gampaha</label>
               </div>
             </div><br/>
 
