--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="col-md-2 focus-grid">
-                    <a href="#">
+                    <a href="postadfree.html">
                         <div class="focus-border">
                             <div class="focus-layout">
                                 <div class="focus-image"><i class="fas fa-paper-plane"></i></div>
@@ -123,7 +123,7 @@
                     </a>
                 </div>
                 <div class="col-md-2 focus-grid center-box">
-                    <a href="#">
+                    <a href="quicklease.html">
                         <div class="focus-border">
                             <div class="focus-layout">
                                 <div class="focus-image"><i class="fa fa-tty"></i></div>
