--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -56,8 +56,7 @@
                 <div id="user-functions" class="col-sm-5 col-md-4 clearfix">
                     <div class="user-links pull-right">
                         <a href="#">
-                            Ann</a>
-                        </a> |
+                            Ann</a>  |
                         <a data-toggle="modal" href="#">Logout</a>
                     </div>
 
@@ -77,7 +76,7 @@
             </div>
 
 
-            <div class="row dashboard">
+            <div class="row dashboard ml-5">
                 <div class="col-md-2 focus-grid">
                     <a href="user-profile.html">
                         <div class="focus-border">
@@ -138,7 +137,7 @@
 
         </div>
     </div>
-
+    <!-- <br><br><br><br> -->
 
     <footer>
         <div class="container">
