--- a/edit-profile.html
+++ b/edit-profile.html
@@ -89,7 +89,7 @@
                 <label for="inputEmail3" class=" ml-4">First Name <span class="asterisk">*</span></label>
               </div>
               <div class="col-7">
-                <input type="text" class="form-control" placeholder="First name" value="Ann">
+                <input type="text" class="form-control" placeholder="First name" id="first-name" value="Ann">
               </div>
             </div><br />
 
@@ -98,7 +98,7 @@
                 <label for="inputEmail3" class=" ml-4">Last Name <span class="asterisk">*</span></label>
               </div>
               <div class="col-7">
-                <input type="text" class="form-control" placeholder="Last name" value="Perera">
+                <input type="text" class="form-control" placeholder="Last name" id="last-name" value="Perera">
               </div>
             </div><br />
 
@@ -107,7 +107,7 @@
                 <label for="inputEmail3" class=" ml-4">Telephone <span class="asterisk">*</span></label>
               </div>
               <div class="col-7">
-                <input type="number" class="form-control" placeholder="Mobile Number" value="0715685965">
+                <input type="number" class="form-control" placeholder="Mobile Number" id="phone-number" value="0715685965">
               </div>
             </div><br />
 
@@ -116,7 +116,7 @@
                 <label for="inputEmail3" class=" ml-4">Email <span class="asterisk">*</span></label>
               </div>
               <div class="col-7">
-                <input type="email" class="form-control" placeholder="Email Address" value="ann44@gmail.com">
+                <input type="email" class="form-control" placeholder="Email Address" id="email" value="ann44@gmail.com">
               </div>
             </div><br />
 
@@ -138,7 +138,7 @@
 
             <div class="text-center">
               <a href="#" class="btn btn-success reset-btn">Reset</a>
-              <a href="user-profile-update-success.html" class="btn btn-primary upate-btn" id="btn-profile-update">Update</a>
+              <a href="#" class="btn btn-primary upate-btn" id="btn-profile-update">Update</a>
             </div>
 
 
@@ -188,5 +188,47 @@
   </footer>
 
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+  crossorigin="anonymous"></script>
+
+<script src="js/notify.min.js"></script>
+
+<script>
+  function validateEmail(email) {
+    var re =
+      /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+    return re.test(String(email).toLowerCase());
+  }
+
+  function validateIsEmpty(str) {
+    return /\S+/.test(str);
+  }
+
+  $("#btn-profile-update").click(function () {
+    if (!validateIsEmpty($('#first-name').val())) {
+      $.notify("Firstname cannot be empty", "error");
+      return;
+    }
+    if (!validateIsEmpty($('#last-name').val())) {
+      $.notify("Last Name cannot be empty", "error");
+      return;
+    }
+
+    if (!validateIsEmpty($('#phone-number').val())) {
+      $.notify("Phone number cannot be empty", "error");
+      return;
+    }
+
+    if (!validateEmail($('#email').val())) {
+      $.notify("Invalid Email", "error");
+      return;
+    }
+
+    window.location.href = "user-profile-update-success.html";
+    
+  });
+</script>
 
 </html>
