--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -76,7 +76,7 @@
             </div>
 
 
-            <div class="row dashboard ml-5">
+            <div class="row dashboard">
                 <div class="col-md-2 focus-grid">
                     <a href="user-profile.html">
                         <div class="focus-border">
