--- a/user-profile-update-success.html
+++ b/user-profile-update-success.html
@@ -67,7 +67,7 @@
         <ul class="breadcrumb">
           <li><a href="index.html">Home</a></li>
           <li><a href="user-dashboard.html">Dashboard</a></li>
-          <li class="active">Change Password</li>
+          <li class="active">My Profile</li>
         </ul>
       </div>
 
